testsuite/tests/typing-private/private.compilers.principal.reference
Line 20, characters 30-31:
20 | let f (x : F0.t) : Foobar.t = x
                                   ^
Error: This expression has type "F0.t" but an expression was expected of type
         "Foobar.t"
Line 6, characters 0-6:
6 | module M3 : sig
    ^^^^^^
Error: Syntax error
Line 2, characters 14-18:
2 | fun x -> (x : M3.t :> M1.t);;
                  ^^^^
Error: Unbound module "M3"


Line 4, characters 0-6:
4 | module M4 : sig
    ^^^^^^
Error: Syntax error

